table vertical align fix

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -99,6 +99,12 @@ padding-left: 0px;
     border-bottom-width: 0px;
     border-left-width: 0px;
   }
+ 
+
+td {
+vertical-align: top;
+}
+
 
 
 .pricing-support th {
